--- a/css/creative.css
+++ b/css/creative.css
@@ -6881,15 +6881,22 @@ a.close.disabled {
     font-size: 18px;
   }
 
-  .page-section {
-    padding: 2.5em 0;
-    padding-bottom: 20rem;
-  }
 
   
 
 }
 
+.page-section {
+  padding: 6.5em 0;
+  padding-bottom: 20rem;
+}
+
+@media(max-width: 1200px){
+  .page-section {
+    padding: 6.5em 0;
+    padding-bottom: 20rem;
+  }
+}
 @media (max-width: 900px) {
   .bg-oferta1 {
     background: url("../img/banners/flyer-unido.png") no-repeat center fixed;
@@ -6919,10 +6926,7 @@ a.close.disabled {
     line-height: 19px!important;
 }
 
-  .page-section {
-    padding: 1.5em 0;
-    padding-bottom: 20rem;
-  }
+ 
 
   .text-azul {
     font-size: 13px;
@@ -8576,6 +8580,10 @@ button.bg-dark:focus {
 .pt-2,
 .py-2 {
   padding-top: 0.5rem !important;
+}
+
+.py-2-5 {
+  padding-top: 1.25rem !important;
 }
 
 .pr-2,
@@ -10934,10 +10942,7 @@ hr.light {
   border-radius: 10rem;
 }
 
-.page-section {
-  padding: 6.5em 0;
-  padding-bottom: 20rem;
-}
+
 
 .page-section2 {
   padding: 15em 0;
@@ -10995,8 +11000,8 @@ hr.light {
 }
 
 .productos {
-  max-width: 10rem;
-  padding-bottom: 2em;
+  max-width: 12rem;
+  padding-bottom: 2.5em;
 }
 
 .ventajas {
